--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content">
         	<p>With the engineer's accomplishiment,have the temperament of designer.</p>
         	<div class="btn">About me</div>
-        	<div class="sanjiao"></div>
+        	<div class="sanjiao"><img width="60px"src="image/xia.png" alt=""></div>
         </div>
     </header>
     <!-- 内容content -->
@@ -159,7 +159,9 @@
     </h3>
 </footer>
 <!-- 回到顶部 -->
-<div class="backTop"></div>
+<div class="backTop">
+    <img src="image/top.png" alt="">
+</div>
 <!-- 背景音乐 -->
 <audio src=""></audio>
 
